project/logs/20250528_164656.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,prefile:vs_6_0

In file included from Object3d.VS.hlsl:1:
./object3d.hlsli:3:5: error: unknown type name 'float_t4'
    float_t4 position : SV_Position;
    ^
./object3d.hlsli:4:5: error: unknown type name 'float_t2'
    float_t2 texcoord : TEXCOORD0;
    ^
Object3d.VS.hlsl:13:8: error: redefinition of 'VertexShaderInput'
struct VertexShaderInput
       ^
./object3d.hlsli:1:8: note: previous definition is here
struct VertexShaderInput
       ^
Object3d.VS.hlsl:21:27: error: use of undeclared identifier 'input'
    output.position = mul(input.position, gTransformationMatrix.WVP);
                          ^

